# mtm_ex3

./: CMakeLists.txt  ParkingLot.cpp  ParkingLot.h  ParkingLotPrinter.cpp  README.md  Time.h  UniqueArray.h  UniqueArrayImp.h  Vehicle.cpp  Vehicle.h  main.cpp  ~$גיל 3 מתם.docx  תרגיל 3 מתם.docx
Makefile_folder/: Makefile
facebook tests/parking_lot_tester/parking_lot_tester/: parking_lot.py  system_wrapper.py
facebooktests/: OurUATests.cpp  main2.cpp
facebooktests/parking_lot_tester/parking_lot_tester/: READ ME! (IDIOTS PLEASE DO).txt  input_gen.py  main.py
parking_lot_tester/: vehicle.py
parking_lot_tester/io_files/: input1.txt  input10.txt  input100.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input28.txt  input29.txt  input3.txt  input30.txt  input31.txt  input32.txt  input33.txt  input34.txt  input35.txt  input36.txt  input37.txt  input38.txt  input39.txt  input4.txt  input40.txt  input41.txt  input42.txt  input43.txt  input44.txt  (+260 more)
